footer and sticky added

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
   </header>
 
   <main>
+
+   
     <div class="container-fluid">
+      <!-- First section small -->
       <div class="row justify-content-center d-md-none">
-        <article class="col-sm-12 col-md-7 my-sm-3 my-md-0 order-md-2">
+        <article class="col-sm-12 my-sm-3">
           <h2 class="pt-sm-3">Top Story</h2>
           <a href="#"><img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg"
               alt="first story"></a>
@@ -70,7 +73,7 @@
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-1">
+        <article class="col-sm-12 my-sm-3">
           <h2 class=" pt-sm-3">Featured Stories</h2>
           <a><img class="img-fluid" src="assets/img-featured-stories/autopsy-george-floyd-cause-death.jpg"
               alt="featured-story"></a>s
@@ -80,7 +83,7 @@
             independent autopsy which was requested after the family rejected the preliminary findings of the Hennepin
             County Medical Examiner's office last week.</p>
         </article>
-        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-3">
+        <article class="col-sm-12 my-sm-3">
           <a href="#"><img class="img-fluid" src="assets/img-featured-stories/colorado-protest.jpg"
               alt="first story"></a>
           <h3><a class="text-dark" href="#">Troops Head to China-India Border Despite Both Sides Saying Situation
@@ -88,7 +91,7 @@
           <p>Chinese and Indian officials say they're capable of handling an uptick in border clashes but a reported
             increase in personnel and equipment could raise the stakes at the flashpoint.</p>
         </article>
-        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-5">
+        <article class="col-sm-12 my-sm-3">
           <a href="#"><img class="img-fluid" src="assets/img-featured-stories/fea-biden-banner.jpg"
               alt="featured-story"></a>
           <h3><a class="text-dark" href="#">Biden, the Moderate, Plans the Most Radical Economic Overhaul Since FDR</a>
@@ -96,7 +99,7 @@
           <p>To revive the economy, Joe Biden wants to build his own New Deal with an array of proposals to strengthen
             the social safety net and revive prosperity. The big question: Is he up to the challenge?</p>
         </article>
-        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-7">
+        <article class="col-sm-12 my-sm-3">
           <a href="#"><img class="img-fluid"
               src="assets/img-featured-stories/india-kashmir-china-border-conflict-pakistan.jpg"
               alt="featured-story"></a>
@@ -105,7 +108,7 @@
           <p>Senator Tom Cotton, an Army veteran, proposed deployment of troops in cities after a week of violent
             demonstrations across the nation.</p>
         </article>
-        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-8">
+        <article class="col-sm-12 my-sm-3">
           <a href="#"><img class="img-fluid"
               src="assets/img-featured-stories/tom-cotton-republican-insurrection-act.jpg" alt="featured-story"></a>
           <h3><a class="text-dark" href="#">George Soros Conspiracy Resurfaces Using Old 'Paid Protestor' YouTube
@@ -114,7 +117,7 @@
             incredibly gullible," the journalist who conducted the original interview responded today.</p>
         </article>
 
-        <section class="debate col-sm-12 col-md-12my-2 order-md-10">
+        <section class="debate col-sm-12my-2">
           <h2 class="pt-3">THE DEBATE</h2>
 
           <div class="capitalism d-flex mx-2">
@@ -135,7 +138,7 @@
           </div>
         </section>
 
-        <section class="opinion col-sm-12 my-2 col-md-12 order-md-11">
+        <section class="opinion col-sm-12 my-2">
           <h2 class="pt-3">opinion</h2>
           <div class="opinion-section pb-2 d-flex">
             <div>
@@ -201,7 +204,7 @@
           </div>
         </section>
 
-        <section class="sponsored col-sm-12 col-md-6 my-2 order-md-9">
+        <section class="sponsored col-sm-12 my-2">
 
           <div class="py-4">
             <div>
@@ -542,8 +545,9 @@
         </section>
 
       </div>
-
+       <!-- first section medium large -->
       <div class="row justify-content-center medium">
+        <!-- first column -->
         <div class="col-md-5 col-lg-4 row">
           <article class="col-md-12 my-sm-3 my-md-0">
             <h2 class=" pt-sm-3">Featured Stories</h2>
@@ -664,7 +668,7 @@
             </div>
           </section>
         </div>
-
+        <!-- second column -->
         <div class="col-md-7 col-lg-4 d-flex flex-column">
           <article class="top-story col-md-12 my-md-0">
             <h2 class="pt-sm-3">Top Story</h2>
@@ -724,7 +728,7 @@
               </figure>
             </div>
           </section>
-          <section class="more-stories clearfix my-2 pt-3">
+          <section class="more-stories clearfix my-2 pt-3 sticky-top">
             <h2>More Stories</h2>
             <div class="d-flex border-top pt-3">
               <div>
@@ -865,7 +869,7 @@
           </section>
 
         </div>
-
+        <!-- third column -->
         <div class="col-md-12 col-lg-4 justify-content-center">
           <section class="debate col-md-12 my-2">
             <h2 class="pt-3">THE DEBATE</h2>
@@ -955,7 +959,7 @@
             </div>
           </section>
 
-          <section class="sign my-3 col-md-6 col-lg-12 py-4">
+          <section class="sign my-3 col-md-6 col-lg-12 py-4 mx-auto">
             <div class="row justify-content-center">
               <div class="sign-up col-6 p-4 border">
                 <div class="d-flex">
@@ -970,7 +974,7 @@
             </div>
           </section>
 
-          <section class="sponsored col-md-7 col-lg-12 my-2">
+          <section class="sponsored col-md-7 col-lg-12 my-2 sticky-top mx-auto">
             <div class="py-4">
               <div>
                 <a href="#"><img src="assets/img-sponsored2/nw-food-medicine-sponsored.jpg" alt=""></a>
@@ -1036,12 +1040,10 @@
             </div>
           </section>
         </div>
-
+        
       </div>
 
-
-
-
+       <!-- second section -->
       <section class="magazine my-2 row">
         <h2 class="pt-4 col-md-12 mx-auto text-center"><img src="assets/images/n-icon.png" alt="n-icon">IN THE MAGAZINE
         </h2>
@@ -1187,42 +1189,45 @@
         </div>
       </section>
 
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </main>
 
   <footer>
+    <div class="top-footer pl-1 d-flex justify-content-between align-items-end border-bottom">
+      <div>
+        <a href="#"><img src="assets/images/newsweek.png" alt="title"></a>
+        <span>© 2020 NEWSWEEK</span>
+      </div>
+      <div>
+        <a href="#"><img src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="#"><img src="assets/icons/insta.png" alt="instagram"></a>
+        <a href="#"><img src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="#"><img src="assets/icons/science.png" alt="t"></a>
+        <a href="#"><img src="assets/icons/linedlin.png" alt="linkedin"></a>
+      </div>
+    </div>
     <div>
-      <img src="assets/images/newsweek.png" alt="title">
-      <span>© 2020 NEWSWEEK</span>
+      <div class="bottom-footer mt-2 pl-2">
+        <p>Editions:
+          <a href="#">U.S. Edition</a> |
+          <a href="#">Pakistan</a> |
+          <a href="#">日本</a> |
+          <a href="#">Polska</a> |
+          <a href="#">România</a> | <br>
+          <a href="#">About Us</a> |
+          <a href="#">Corrections</a> |
+          <a href="#">Contact Us</a> |
+          <a href="#">Editorial Guidelines</a> |
+          <a href="#">Advertise</a> |
+          <a href="#">Copyright</a> |
+          <a href="#">Terms & Conditions</a> |
+          <a href="#">Privacy Policy</a> |
+          <a href="#">Cookie Policy</a> |
+          <a href="#">Terms of Sale</a> |
+          <a href="#">Archive</a> |
+          <a href="#">Announcements</a> |
+          <a href="#">Consent preferences</a> |</p>
+      </div>
     </div>
 
 
