text and images added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <main>
 
-   
+
     <div class="container-fluid">
       <!-- First section small -->
       <div class="row justify-content-center d-md-none">
@@ -545,7 +545,7 @@
         </section>
 
       </div>
-       <!-- first section medium large -->
+      <!-- first section medium large -->
       <div class="row justify-content-center medium">
         <!-- first column -->
         <div class="col-md-5 col-lg-4 row">
@@ -1040,60 +1040,60 @@
             </div>
           </section>
         </div>
-        
+
       </div>
 
-       <!-- second section -->
+      <!-- second section -->
       <section class="magazine my-2 row">
         <h2 class="pt-4 col-md-12 mx-auto text-center"><img src="assets/images/n-icon.png" alt="n-icon">IN THE MAGAZINE
         </h2>
         <div class="col-12 col-md-3">
-          <img class="w-100 img-fluid mag-img" src="assets/images/may-29-june-06-2020-cover.jpg" alt="cover">
+          <img class="w-100 img-fluid mag-img" src="assets/img-magazine/may-29-june-06-2020-cover.jpg" alt="cover">
           <p class="pt-2 text-center">See All Features <img src="assets/images/chevron-right.svg" alt="arrow">
           </p>
         </div>
 
         <div class="col-12 col-md-3">
-          <img class="w-100 img-fluid mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <img class="w-100 img-fluid mag-img" src="assets/img-magazine/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Periscope</span><span
+              class="ml-2 text-danger">Tech & Science</span></div>
+          <h4>How Amazon's Bet on Autonomous Vehicles Can Help Protect Us from Viruses</h4>
+        </div>
+        <div class="col-12 col-md-3">
+          <img class="w-100 img-fluid mag-img" src="assets/img-magazine/cul-books-banner.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Downtime</span><span
+              class="ml-2 text-danger">Culture</span></div>
+          <h4>The 20 Must-Read Fiction and Nonfiction Books of the Summer</h4>
+        </div>
+        <div class="col-12 col-md-3">
+          <img class="w-100 img-fluid mag-img" src="assets/img-magazine/cul-ps-ramyyoussef.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Downtime</span><span
+              class="ml-2 text-danger">Culture</span></div>
+          <h4>Ramy Youssef has a bold vision for the second season of Hulu's 'Ramy'</h4>
+        </div>
+        <div class="col-12 col-md-3">
+          <img class="w-100 mag-img" src="assets/img-magazine/cul-uncharted-frozentreats-banner.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Downtime</span><span
+              class="ml-2 text-danger">Culture</span></div>
+          <h4>World's Finest Frozen Treats/h4>
+        </div>
+        <div class="col-12 col-md-3">
+          <img class="w-100 mag-img" src="assets/img-magazine/fea-china-banner.jpg" alt="mag">
           <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
               class="ml-2 text-danger">News</span></div>
           <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
         </div>
         <div class="col-12 col-md-3">
-          <img class="w-100 img-fluid mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+          <img class="w-100 mag-img" src="assets/img-magazine/per-broadcast-01.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Periscope</span><span
+              class="ml-2 text-danger">Culture</span></div>
+          <h4>Whether Trump Likes it or Not, Network News is Riding a Pandemic Ratings Boom</h4>
         </div>
         <div class="col-12 col-md-3">
-          <img class="w-100 img-fluid mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
-        </div>
-        <div class="col-12 col-md-3">
-          <img class="w-100 mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
-        </div>
-        <div class="col-12 col-md-3">
-          <img class="w-100 mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
-        </div>
-        <div class="col-12 col-md-3">
-          <img class="w-100 mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
-        </div>
-        <div class="col-12 col-md-3">
-          <img class="w-100 mag-img" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
-          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
-              class="ml-2 text-danger">News</span></div>
-          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+          <img class="w-100 mag-img" src="assets/img-magazine/unmasked-man.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">IN FOCUS</span><span
+              class="ml-2 text-danger"></span></div>
+          <h4>UNMASKED MAN</h4>
         </div>
 
       </section>
@@ -1102,56 +1102,56 @@
         <h2 class="col-md-12 text-center border-bottom pt-4 mx-auto"><img src="assets/images/n-icon.png"
             alt="n-icon">EDITOR'S PICK</h2>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/jimmy-fallon-blackface.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/camden-market-reopens.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/coronavirus.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/great-white-shark.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/italy-coronavirus.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/michael-jordan-chicago-bulls.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/prince-harry-meghan-markle-morocco.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
             other members of their shared gender identity.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
-          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <img class="w-100" src="assets/img-editors-pick/wine-alcohol-drinking-stock-getty.jpg" alt="cover">
           <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
               Athlete Policy</a></h4>
           <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
@@ -1163,28 +1163,28 @@
       <section class="u-s my-2 row">
         <h2 class="pl-3 col-md-12">U.S.</h2>
         <div class="col-12 col-md-4">
-          <img class="w-100" src="assets/images/cnn-arrest-2.png" alt="usa">
-          <h4 class=" pt-2">Unions Condemn 'Blatant Abuse' of Police Power After CNN Reporter Arrested</h4>
+          <img class="w-100" src="assets/img-US/wanda-cooper-jones.jpg" alt="usa">
+          <h4 class=" pt-2">Ahmaud Arbery's Mother Says George Floyd's Death 'Sent Me Back'</h4>
         </div>
         <div class="col-12 col-md-4 mt-3 mt-md-0">
-          <img class="w-100" src="assets/images/cnn-arrest-2.png" alt="usa">
-          <h4 class=" pt-2">Unions Condemn 'Blatant Abuse' of Police Power After CNN Reporter Arrested</h4>
+          <img class="w-100" src="assets/img-US/joe-biden-memorial-day-delaware.jpg" alt="usa">
+          <h4 class=" pt-2">George Floyd Protests Increase Support for Biden Over Trump: Poll</h4>
         </div>
         <div class="col-12 col-md-4 mt-2">
           <div class="d-flex us-aside border-bottom">
-            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
-            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
-                Checks: Senate Dems</a></h4>
+            <img class="col-3 px-0" src="assets/img-US/fox-news-host-tucker-carlson.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">Carlson Questions How Trump Can Protect Country After Fox
+                Reporter Chased</a></h4>
           </div>
           <div class="d-flex us-aside py-2 border-bottom">
-            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
-            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
-                Checks: Senate Dems</a></h4>
+            <img class="col-3 px-0" src="assets/img-US/mark-zuckerberg.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">Facebook Loses Business Deal as Employees Protest Donald
+                Trump Posts</a></h4>
           </div>
           <div class="d-flex us-aside py-2 border-bottom">
-            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
-            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
-                Checks: Senate Dems</a></h4>
+            <img class="col-3 px-0" src="assets/img-US/elizabeth-warren.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">Elizabeth Warren Says Trump's Riot Plans Places 'Our
+                Democracy in Danger'</a></h4>
           </div>
         </div>
       </section>
