fixed the gap between columns

--- a/index.html
+++ b/index.html
@@ -548,11 +548,11 @@
       <!-- first section medium large -->
       <div class="row justify-content-center medium">
         <!-- first column -->
-        <div class="col-md-5 col-lg-4 row">
+        <div class="col-md-5 col-lg-4 row px-o">
           <article class="col-md-12 my-sm-3 my-md-0">
             <h2 class=" pt-sm-3">Featured Stories</h2>
             <a><img class="img-fluid" src="assets/img-featured-stories/autopsy-george-floyd-cause-death.jpg"
-                alt="featured-story"></a>s
+                alt="featured-story"></a>
             <h3><a class="text-dark" href="#">Independent Autopsy Finds George Floyd's Death Homicide Caused by
                 Asphyxia</a></h3>
             <p>Attorneys and forensic pathologists representing George Floyd's family on Monday announced details of an
@@ -669,7 +669,7 @@
           </section>
         </div>
         <!-- second column -->
-        <div class="col-md-7 col-lg-4 d-flex flex-column">
+        <div class="second-column col-md-7 col-lg-4 d-flex flex-column px-0">
           <article class="top-story col-md-12 my-md-0">
             <h2 class="pt-sm-3">Top Story</h2>
             <a href="#"><img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg"
@@ -870,7 +870,7 @@
 
         </div>
         <!-- third column -->
-        <div class="col-md-12 col-lg-4 justify-content-center">
+        <div class="col-md-12 col-lg-4 justify-content-center px-0">
           <section class="debate col-md-12 my-2">
             <h2 class="pt-3">THE DEBATE</h2>
 
@@ -1040,7 +1040,6 @@
             </div>
           </section>
         </div>
-
       </div>
 
       <!-- second section -->
@@ -1103,59 +1102,58 @@
             alt="n-icon">EDITOR'S PICK</h2>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/jimmy-fallon-blackface.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Jimmy Fallon Says 'I'm Not a Racist' in 'Tonight Show'
+              Blackface Apology</a></h4>
+          <small>The TV host followed up his Twitter apology for a 2000 SNL sketch with an episode aimed at tackling
+            racism.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/camden-market-reopens.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Welcome to 'Mockdown' as COVID-19 Quarantine Ends in London…
+              Sort Of</a></h4>
+          <small>You are allowed to go out but you should stay at home but you should support local businesses but you
+            mustn't gather in groups, unless it's outside. But stay at home.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/coronavirus.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">New Studies Show Humidity May Be Important Weapon in Fighting
+              Coronavirus</a></h4>
+          <small>This summer, don't complain about the humidity: it appears to help the lungs and immune system repel
+            invading viruses and keep them from replicating.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/great-white-shark.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Great White Shark May Have Swum Into Open Ocean to Avoid Mating
+              Attempts</a></h4>
+          <small>Unama'ki turned away from the waters off the eastern U.S. coast and started heading deeper into the
+            ocean at the start of April.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/italy-coronavirus.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Italian Doctor's Claim Coronavirus Is Getting Weaker Questioned
+              by Experts</a></h4>
+          <small>Alberto Zangrillo said viral loads from tests carried out in the last 10 days were "infinitesimal"
+            compared with samples from a month ago.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/michael-jordan-chicago-bulls.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Michael Jordan Makes Rare Political Statement on George Floyd's
+              Death</a></h4>
+          <small>Jordan urged protesters to make their voices heard at the ballot booth as nationwide demonstrations
+            raged on for a sixth consecutive night.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/prince-harry-meghan-markle-morocco.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Prince Harry and Meghan Markle Could Stop Paparazzi Drones
+              Using Diana Law</a></h4>
+          <small>The Duke and Duchess of Sussex could tackle the paparazzi using a Californian law introduced after
+            Princess Diana's death, legal experts tell Newsweek.</small>
         </div>
         <div class="col-12 col-md-3 pt-4">
           <img class="w-100" src="assets/img-editors-pick/wine-alcohol-drinking-stock-getty.jpg" alt="cover">
-          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
-              Athlete Policy</a></h4>
-          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
-            other members of their shared gender identity.</small>
+          <h4 class="mt-2"><a class="text-dark" href="#">Estrogen Levels May Make Alcohol More Rewarding to Female Mice,
+              Study Finds</a></h4>
+          <small>Findings may mean women drink to excess during certain points in their menstrual cycle.</small>
         </div>
 
       </section>
